# Text2SQLAgent

./: .env.example  .gitignore  AGENTS.md  FRONTEND_INTEGRATION.md  INTEGRATION_GUIDE.md  MCP_README.md  MINDSDB_INTEGRATION.md  PROJECT_STATUS.md  README.md  SETUP_GUIDE.md  SYSTEM_ARCHITECTURE.md  api_server.py  env.example  kosis_fallback.py  mcp_architecture.md  pyproject.toml  requirements.txt  start_system.py  test_api_server.py  test_e2e.py  test_fallback.py  test_mcp_client.py
.cursor/rules/: rl-text2sql-public-api.md  rl-text2sql-public-api.mdc
application/agent/: __init__.py  orchestrator.py
backend/: __init__.py  api_server.py  integrated_api_server.py  main.py  mcp_api.py  mcp_api_v2.py  simple_test_server.py
backend/agent/: __init__.py  agent_chain.py  nl2sql.py  text2sql_agent.py
backend/api/: __init__.py  agent_api.py  database_api.py
backend/database/: __init__.py  connection_manager.py  connection_storage.py
backend/llm_client/: __init__.py  gguf.py  huggingface.py  openai_api.py
backend/tests/: test_agent_chain.py  test_api.py  test_llm.py  test_mcp.py  test_text2sql_agent.py
backup_old_system/application/: __init__.py  main.py
backup_old_system/backend/: integrated_api_server.py
frontend/: README.md  README_streaming.md  next.config.js  tailwind.config.js
mcp_client/: __init__.py  client.py
myagent/: README.md  requirements.txt
plans/: 2025-07-16-pr-plan.md  2025-07-17-refactor-agent.md  2025-07-18-postgres-metadata.md  2025-07-19-optional-columns.md
tests/: test_agent.py  test_postgresql_metadata.py
(+63 files in other folders)
