[project]
name = "publicdatatext2sqlagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.7.0",
    "aiohttp>=3.9.1",
    "aiomysql>=0.2.0",
    "aioredis>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "bitsandbytes>=0.46.0",
    "cryptography>=41.0.0",
    "fastapi>=0.104.0",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "litellm>=1.72.6",
    "mcp>=1.9.4",
    "motor>=3.3.0",
    "numpy>=2.3.0",
    "openai>=1.86.0",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pymongo>=4.6.0",
    "pymysql>=1.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "redis>=5.0.0",
    "requests>=2.32.4",
    "structlog>=23.2.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "uvicorn[standard]>=0.24.0",
    "websockets>=15.0.1",
]
